tests/scan/fixtures/validation/negative/clean_go_clean-queue-consumer/go.mod
module github.com/example/clean-queue-consumer
go 1.21
